--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <div class="logo">Logo</div>
+        <nav>
+            <ul class="nav-links">
+                <li><a href="About.html">Home</a></li>
+                <li><a href="https://90541106199prabhjotkaur.github.io/mtm6302-capstone-90541106199Prabhjotkaur/">Astronomy</a></li>
+                <li><a href="pokedex.html">Pokedex</a></li>
+            </ul>
+        </nav>
+    </header>
     <div class="container">
         <h1>NASA Astronomy Picture of the Day</h1>
         <form id="date-form">
