--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <ul class="nav-links">
                 <li><a href="About.html">Home</a></li>
                 <li><a href="https://90541106199prabhjotkaur.github.io/mtm6302-capstone-90541106199Prabhjotkaur/">Astronomy</a></li>
-                <li><a href="pokedex.html">Pokedex</a></li>
+                <li><a href="https://90541106199prabhjotkaur.github.io/Pokedex/">Pokedex</a></li>
             </ul>
         </nav>
     </header>
