--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div class="logo">Logo</div>
+        <H1>WEB DEVELOPMENT III</H1>
         <nav>
             <ul class="nav-links">
                 <li><a href="About.html">Home</a></li>
